# weekly-signal-digest

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: digest.yml
fixtures/: identities.yaml  signals.jsonl
signal_digest/: __init__.py  cli.py  core.py  filter.py  rank.py
signal_digest/delivery/: __init__.py  slack.py  stdout.py
signal_digest/sources/: __init__.py  github_events.py  hacker_news.py  rss.py
tests/: test_filter.py  test_pipeline_demo.py  test_rank.py
